Grid fix on IE

--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -61,10 +61,12 @@
     .row > &,
     & > &,
     > .row {
-      margin-left: 0;
-      margin-right: 0;
-      padding-left: 0;
-      padding-right: 0;
+      &:not(.mx-auto) {
+        margin-left: 0 !important;
+        margin-right: 0 !important;
+      }
+      padding-left: 0 !important;
+      padding-right: 0 !important;
     }
 
     // If this CMS Wrapper is within another CMS Wrapper Make width 100%
@@ -78,10 +80,12 @@
       @include make-col-ready(('margin-top': false));
       // Remove Aligment
       .row > &.row {
-        margin-left: 0;
-        margin-right: 0;
-        padding-left: 0;
-        padding-right: 0;
+        &:not(.mx-auto) {
+          margin-left: 0 !important;
+          margin-right: 0 !important;
+        }
+        padding-left: 0 !important;
+        padding-right: 0 !important;
       }
     }
     
