--- a/scss/intergage/_c2-pretty-messenger.scss
+++ b/scss/intergage/_c2-pretty-messenger.scss
@@ -14,6 +14,6 @@
 
   .alert {
     width: $c2-pretty-messenger-alert-max-width;
-    max-width: 100%;;
+    max-width: 100%;
   }
 }
